# understanding_elastic_stack

./: .env  Dockerfile  docker-compose.yml  main.py  pyproject.toml
app/: main.py  models.py  tasks.py
app/routers/: items.py
